[package]
name = "leap"
version = "0.1.0"
authors = ["Daniel Samson"]
edition = "2018"
description = "A rust framework for creating web applications."
repository = "https://github.com/daniel-samson/leap.git"
readme = "README.md"
documentation = "https://docs.rs/leap"
homepage = "https://leap.rs"
license = "Apache-2.0"
keywords = ["web", "framework"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
serde_yaml = "0.8.11"
serde_xml = "0.9.1"
serde_urlencoded = "0.5.1"
serde-avro = "0.5.0"
toml = "0.5.6"