[package]
name = "leap"
version = "0.1.0"
authors = ["Daniel Samson"]
edition = "2018"
description = "A rust framework for creating web applications."
repository = "https://github.com/daniel-samson/leap.git"
readme = "README.md"
documentation = "https://docs.rs/leap"
homepage = "https://leap.rs"
license = "Apache-2.0"
keywords = ["web", "framework"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
reqwest = "0.10.4"
serde = "1.0"
serde_json = "1.0"
bytes = "0.5.4"
tokio = { version = "0.2", features = ["full"] }
semver = "0.7.0"
zip = "0.5"
directories = "2.0"