[package]
name = "leap"
version = "0.1.0"
authors = ["Daniel Samson"]
edition = "2018"
description = "A rust framework for creating web applications."
repository = "https://github.com/daniel-samson/leap.git"
readme = "README.md"
documentation = "https://docs.rs/leap"
homepage = "https://leap.rs"
license = "Apache-2.0"
keywords = ["web", "framework"]
categories = ["web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
bytes = "0.5.4"
directories = "2.0"
env_logger = "0.7.1"
log = "0.4.0"
semver = {version = "0.7.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "1.0"
toml = "0.5"
zip = "0.5"
